--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     }],
     "require": {
         "php": "~5.6|~7.0",
+        "illuminate/support": "~5.0",
         "abraham/twitteroauth": "^0.7.2",
         "laravelcollective/html": "^5.3.0",
         "laravelcollective/remote": "^5.3.0",
@@ -24,6 +25,8 @@
         "thujohn/twitter": "^2.2"
     },
     "require-dev": {
+        "orchestra/testbench": "~3.3",
+        "orchestra/testbench-browser-kit": "~3.3",
         "phpunit/phpunit": "~4.0||~5.0",
         "squizlabs/php_codesniffer": "^2.3"
     },
