--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }],
     "require": {
         "php": "~5.6|~7.0",
-        "illuminate/support": "~5.0",
+        "illuminate/container": "~5.5.0",
         "abraham/twitteroauth": "^0.7.2",
         "laravelcollective/html": "^5.3.0",
         "laravelcollective/remote": "^5.3.0",
@@ -28,7 +28,8 @@
         "orchestra/testbench": "~3.3",
         "orchestra/testbench-browser-kit": "~3.3",
         "phpunit/phpunit": "~4.0||~5.0",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "illuminate/support": "~5.0"
     },
     "autoload": {
         "psr-4": {
