--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": "~5.6|~7.0",
         "abraham/twitteroauth": "^0.7.2",
         "laravelcollective/html": "^5.3.*||^5.4.*",
-        "laravelcollective/remote": "^5.3.*"||^5.4.*,
+        "laravelcollective/remote": "^5.3.*||^5.4.*",
         "league/glide-laravel": "^1.0",
         "laravel/socialite": "^2.0",
         "thujohn/twitter": "^2.2"
