--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,19 @@
     "require": {
         "php": "~5.6|~7.0",
         "abraham/twitteroauth": "^0.7.2",
+        "barryvdh/laravel-debugbar": "^2.3",
+        "barryvdh/laravel-ide-helper": "^2.3",
+        "brotzka/laravel-dotenv-editor": "^2.0",
+        "doctrine/dbal": "^2.5",
+        "greggilbert/recaptcha": "^2.2",
+        "laracasts/flash": "^2.0",
+        "laracasts/generators": "^1.1",
+        "laracasts/utilities": "^2.1",
+        "laravel/socialite": "^2.0",
         "laravelcollective/html": "^5.4.0||^5.3.1",
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
-        "laravel/socialite": "^2.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.9.0",
         "thujohn/twitter": "^2.2"
     },
     "require-dev": {
