--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "require-dev": {
         "phpunit/phpunit": "~4.0||~5.0",
         "squizlabs/php_codesniffer": "^2.3",
-        "illuminate/support": "~5.0"
+        "illuminate/http": "~5.3|~5.4",
+        "illuminate/support": "~5.3|~5.4"
     },
     "autoload": {
         "psr-4": {
