--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,15 @@
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
+        "illuminate/contracts": "~5.4",
+        "illuminate/http": "~5.3|~5.4",
+        "illuminate/support": "~5.3|~5.4",
         "thujohn/twitter": "^2.2"
     },
     "require-dev": {
+        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0||~5.0",
-        "squizlabs/php_codesniffer": "^2.3",
-        "illuminate/http": "~5.3|~5.4",
-        "illuminate/support": "~5.3|~5.4"
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
