--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
-        "illuminate/contracts": "~5.4",
+        "illuminate/contracts": "~5.3|~5.4",
         "illuminate/http": "~5.3|~5.4",
         "illuminate/support": "~5.3|~5.4",
         "thujohn/twitter": "^2.2"
