--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,12 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "barryvdh/laravel-ide-helper": "^2.3",
         "brotzka/laravel-dotenv-editor": "^2.0",
+        "davestewart/sketchpad": "^1.2",
         "doctrine/dbal": "^2.5",
         "greggilbert/recaptcha": "^2.2",
+        "illuminate/contracts": "~5.3|~5.4",
+        "illuminate/http": "~5.3|~5.4",
+        "illuminate/support": "~5.3|~5.4",
         "laracasts/flash": "^2.0",
         "laracasts/generators": "^1.1",
         "laracasts/utilities": "^2.1",
@@ -30,10 +34,8 @@
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
-        "illuminate/contracts": "~5.3|~5.4",
-        "illuminate/http": "~5.3|~5.4",
-        "illuminate/support": "~5.3|~5.4",
-        "thujohn/twitter": "^2.2"
+        "thujohn/twitter": "^2.2",
+        "zondicons/blade-bridge": "^0.1.3"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
