--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "laravelcollective/html": "^5.4.0||^5.3.1",
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
+        "mews/purifier": "^2.0",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
         "thujohn/twitter": "^2.2",
         "zondicons/blade-bridge": "^0.1.3"
