Package -- add kitetail/zttp

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "illuminate/contracts": "~5.3|~5.4",
         "illuminate/http": "~5.3|~5.4",
         "illuminate/support": "~5.3|~5.4",
+        "kitetail/zttp": "^0.1.0",
         "laracasts/flash": "^2.0",
         "laracasts/generators": "^1.1",
         "laracasts/utilities": "^2.1",
