--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "~5.6|~7.0",
         "abraham/twitteroauth": "^0.7.2",
+        "albertcht/invisible-recaptcha": "^1.4",
         "barryvdh/laravel-debugbar": "^2.3",
         "barryvdh/laravel-ide-helper": "^2.3",
         "brotzka/laravel-dotenv-editor": "^2.0",
