--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "league/glide-laravel": "^1.0",
         "mews/purifier": "^2.0",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
+        "spatie/laravel-collection-macros": "^2.3",
         "thujohn/twitter": "^2.2",
         "zondicons/blade-bridge": "^0.1.3"
     },
