--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "laravelcollective/remote": "^5.4.0||^5.3.1",
         "league/glide-laravel": "^1.0",
         "mews/purifier": "^2.0",
+        "plank/laravel-mediable": "^2.4",
         "rap2hpoutre/laravel-log-viewer": "^0.9.0",
         "spatie/laravel-collection-macros": "^2.3",
         "thujohn/twitter": "^2.2",
