--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,29 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "~5.6|~7.0"
-
+        "php": "~5.6|~7.0",
+        "abraham/twitteroauth": "^0.7.4",
+        "albertcht/invisible-recaptcha": "^1.7",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "brotzka/laravel-dotenv-editor": "^2.0",
+        "doctrine/dbal": "^2.6",
+        "greggilbert/recaptcha": "^2.2",
+        "illuminate/contracts": "^5.5|^5.4",
+        "illuminate/http": "^5.5|^5.4",
+        "illuminate/support": "^5.5|^5.4",
+        "laracasts/flash": "^3.0",
+        "laracasts/generators": "^1.1",
+        "laracasts/utilities": "^3.0",
+        "laravel/socialite": "^3.0",
+        "laravelcollective/html": "^5.5|5.4",
+        "laravelcollective/remote": "^5.5|^5.4",
+        "league/glide-laravel": "^1.0",
+        "mews/purifier": "^2.0",
+        "plank/laravel-mediable": "^2.5",
+        "rap2hpoutre/laravel-log-viewer": "^0.10.4",
+        "spatie/laravel-collection-macros": "^3.0",
+        "thujohn/twitter": "^2.2",
+        "zondicons/blade-bridge": "^0.1.3"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
