--- a/composer.json
+++ b/composer.json
@@ -16,28 +16,9 @@
     }],
     "require": {
         "php": "~5.6|~7.0",
-        "abraham/twitteroauth": "^0.7.2",
-        "albertcht/invisible-recaptcha": "^1.4",
-        "barryvdh/laravel-debugbar": "^2.3",
-        "barryvdh/laravel-ide-helper": "^2.3",
-        "brotzka/laravel-dotenv-editor": "^2.0",
-        "doctrine/dbal": "^2.5",
-        "greggilbert/recaptcha": "^2.2",
         "illuminate/contracts": "~5.5.0|~5.4",
         "illuminate/http": "~5.5.0|~5.4",
         "illuminate/support": "~5.5.0|~5.4",
-        "laracasts/flash": "^2.0",
-        "laracasts/generators": "^1.1",
-        "laracasts/utilities": "^2.1",
-        "laravel/socialite": "^3.0",
-        "laravelcollective/html": "^5.4.0||^5.3.1",
-        "laravelcollective/remote": "^5.4.0||^5.3.1",
-        "league/glide-laravel": "^1.0",
-        "mews/purifier": "^2.0",
-        "plank/laravel-mediable": "^2.4",
-        "rap2hpoutre/laravel-log-viewer": "^0.9.0",
-        "spatie/laravel-collection-macros": "^2.3",
-        "thujohn/twitter": "^2.2",
         "zondicons/blade-bridge": "^0.1.3"
     },
     "require-dev": {
@@ -63,9 +44,17 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "laravel": {
+
+            "aliases": {
+                "Gmap": "ShawnSandy\\Extras\\Apps\\Maps\\MapsFacade"
+            }
         }
     },
     "config": {
         "sort-packages": true
     }
+
+
 }
