--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "php": "~5.6|~7.0",
         "illuminate/contracts": "~5.5.0|~5.4",
         "illuminate/http": "~5.5.0|~5.4",
-        "illuminate/support": "~5.5.0|~5.4",
-        "zondicons/blade-bridge": "^0.1.3"
+        "illuminate/support": "~5.5.0|~5.4"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
@@ -46,6 +45,10 @@
             "dev-master": "1.0-dev"
         },
         "laravel": {
+
+            "providers": [
+                "ShawnSandy\\Extras\\ExtrasServicesProvider"
+            ],
 
             "aliases": {
                 "Gmap": "ShawnSandy\\Extras\\Apps\\Maps\\MapsFacade"
